# CoHMM

./: .darwin  .gitignore  .travis.yml  2DKriging.cpp  2DKriging.hpp  2D_DaDTest.cpp  CMakeLists.txt  CoMD_info.h  Makefile  README.md  TODO.md  cohmm.c  cohmm_swiftt.swift  cohmm_swiftt.tcl  flux.cpp  flux.hpp  input.cpp  input.json  input_bigsim.json  kriging.cpp  kriging.hpp  krigingMod.ci  main.ci  main.h  main_cnc.cpp  main_cnc.hpp  output.cpp  print_slurm_hostlist.pl  redisBuckets.cpp  redisBuckets.hpp  start.sh  start_redis.sh  swiftBuild.sh  types.h
2D_CHT/: 2D_CHT.cpp  CMakeLists.txt  CoHMM_CHT.cpp  CoHMM_CHT.hpp  FluxInChunk.cpp  FluxInChunk.hpp  FluxOutChunk.cpp  FluxOutChunk.hpp  FluxTask.cpp  FluxTask.hpp
2D_Charm++/: 2D_Charm++.cpp  CMakeLists.txt  CoHMM_CharmPP.ci  CoHMM_CharmPP.cpp  CoHMM_CharmPP.hpp  CoHMM_DaD.ci  FluxPupWrappers.hpp
2D_ChunksAndTasks/: 2D_ChunksAndTasks.cpp  2D_ChunksAndTasks.hpp  CMakeLists.txt  CppBoolChunk.cpp  CppBoolChunk.hpp  FluxChunk.cpp  FluxChunk.hpp  FluxTask.cpp  FluxTask.hpp  RetryChunk.cpp  RetryChunk.hpp  RetryTask.cpp  RetryTask.hpp
2D_CnC/: 2DKriging.hpp  2D_CnC.cpp  2D_CnC.hpp  CMakeLists.txt  CoHMM_CnC.cpp  CoHMM_CnC.hpp  CoHMM_CnCaD.cpp  CoHMM_CnCaD.hpp  CoHMM_Context.cpp  CoHMM_Context.hpp  cncShmem.cpp  cncShmem.hpp  redisShmem.cpp  redisShmem.hpp
2D_Libcircle/: 2D_Libcircle.cpp  CMakeLists.txt
2D_MPI/: 2D_MPI.cpp  CMakeLists.txt
2D_OMP/: 2D_OMP.cpp  CMakeLists.txt  CoHMM_OMP.cpp  CoHMM_OMP.hpp
2D_SwiftT/: 2D_SwiftT.swift  cohmm_swiftt.swift  cohmm_swiftt.tcl  make-package.tcl
CMakeModules/: FindCBLAS.cmake  FindCNC.cmake  FindChunksAndTasks.cmake  FindHIREDIS.cmake  FindLAPACKE.cmake  FindLibcircle.cmake  FindMKL.cmake
COHMM_lib/: 2DKriging.cpp  2DKriging.hpp  CMakeLists.txt  CoHMM.cpp  CoHMM.hpp  CoHMM_DaD.bakh  CoHMM_DaD.cpp  CoHMM_DaD.hpp  CoHMM_SwiftWrapper.i  kriging.cpp  redisBuckets.cpp  redisBuckets.hpp  redisShmem.cpp  redisShmem.hpp
COMD_lib/: BriefDescription.txt  CMakeLists.txt  CoMDTypes.h  CoMD_lib.h  Makefile  analyze.c  analyze.h  blockTime.sh  getPeak.py  initAtoms.c  libDriver.c  ljForce.h  mycommand.c  mycommand.h  mytype.h  timestep.c
COMD_lib/modif/: CoMD_lib.c  analyze.c  eam.c
COMD_lib/src-lib/: CoMDTypes.h  CoMD_lib.c  Cu01_alloy.h  Cu_u6.h  Makefile  README.TXT  deformation.c  deformation.h  eam.c  eam.h  generate_info_header  initAtoms.h  ljForce.c  memUtils.h  parseInputs.c  parseInputs.h  performanceTimers.c
COMD_lib/src-lib/modif/: analyze.h
COMD_lib/src-lib/modif/.svn/: all-wcprops  entries
CoMDLib/: CoMD_lib.c  CoMD_lib.h  Makefile  Makefile.vanilla  README.txt  README_Mods.txt  cmdLineParser.c  constants.h  deformation.c  deformation.h  eam.c  eam_memleak.c  initAtoms.c  ljForce.c  mycommand.c  mycommand.h  parallel.c  parseInputs.c  random.c  yamlOutput.c
CoMDLib/extra/: Makefile  README.txt  blockMem.sh  libDriver.c  libVerifier.c  stepMem.sh  stepTime.sh
RedisWrapper_Lib/: CMakeLists.txt
RedisWrapper_lib/: RedisWrapper.cpp  RedisWrapper.hpp
input/: input1.txt  input2.txt  input3.txt  input4.txt
scripts/: buildRedisHostfile.py
src/: 2DKriging.cpp  2DKriging.hpp  flux.cpp  flux.hpp  input.cpp  input.hpp  kriging.cpp  kriging.hpp  krigingMod.h  main.ci  main_charm.cpp  main_charm.hpp  main_cnc.cpp  main_cnc.hpp  main_generic.cpp  main_generic.hpp  output.cpp  output.hpp  redisBuckets.cpp  types.h
supplement/: adaptiveMeshPlots.c  error.c
supplement/input/: input10.txt  input11.txt  input119.txt  input12.txt  input120.txt  input121.txt  input122.txt  input123.txt  input124.txt  input125.txt  input126.txt  input127.txt  input128.txt  input129.txt  input13.txt  input130.txt  input131.txt  input14.txt  input141.txt  input142.txt  input143.txt  input144.txt  input145.txt  input146.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input20.txt  input21.txt  input243.txt  input3.txt  input4.txt  input5.txt  input6.txt  input8.txt  input9.txt  jobList.txt
tools/: redisTrace.sh
