cmake_minimum_required(VERSION 2.6)

include_directories(${CHUNKSANDTASKS_INCLUDE_DIRS})
add_executable(2D_CHT 2D_CHT.cpp CoHMM_CHT.cpp FluxInChunk.cpp FluxOutChunk.cpp FluxTask.cpp)
add_executable(cht_worker FluxInChunk.cpp FluxOutChunk.cpp FluxTask.cpp)
target_link_libraries(2D_CHT cohmm comd RedisWrapper ${CHUNKSANDTASKS_LIBRARY} ${MPI_CXX_LIBRARIES} ${LINALG_LIBRARIES} ${HIREDIS_LIBRARIES} -lrt)
target_link_libraries(cht_worker cohmm comd RedisWrapper ${CHUNKSANDTASKS_LIBRARY} ${MPI_CXX_LIBRARIES} ${LINALG_LIBRARIES} ${HIREDIS_LIBRARIES} -lrt)
if(MPI_CXX_COMPILE_FLAGS)
	set_target_properties(2D_CHT PROPERTIES COMPILE_FLAGS "${MPI_CXX_COMPILE_FLAGS}")
	set_target_properties(cht_worker PROPERTIES COMPILE_FLAGS "${MPI_CXX_COMPILE_FLAGS}")
endif()
if(MPI_CXX_LINK_FLAGS)
	set_target_properties(2D_CHT PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
	set_target_properties(cht_worker PROPERTIES LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
endif()
